crates/reinhardt-pages/tests/ui/page/fail/unclosed_for.stderr
error: mismatched closing delimiter: `)`
  --> tests/ui/page/fail/unclosed_for.rs:7:44
   |
 7 |     let _invalid = page!(|items: Vec<String>| {
   |                                               ^ unclosed delimiter
...
13 | });
   |  ^ mismatched closing delimiter
